fix(post): unset overflow on webkit because it adds unwanted margin

--- a/src/components/post/post.module.css
+++ b/src/components/post/post.module.css
@@ -142,6 +142,12 @@
   overflow-x: clip;
 }
 
+@supports (-webkit-appearance: none) {
+  .authorAddressWrapper {
+    overflow-x: unset; /* adds unwanted margin on safari */
+  }
+}
+
 /* use the crypto name as the width of the html element, but hide it and display the verified author address instead */
 .authorAddressHidden {
   visibility: hidden;
